(library
 (name hello)
 (modules hello)
 (instrumentation (backend bisect_ppx)))

(library
 (name inline_tester)
 (modules inline_tester)
 (inline_tests)
 (libraries hello)
 (preprocess (pps ppx_inline_test))
 (instrumentation (backend bisect_ppx)))

(executable
 (name tester)
 (modules tester)
 (libraries hello))

(rule
 (alias runtest)
 (action (run %{exe:tester.exe})))
